<resources>
    <string name="app_name">Temi Navigation</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Conform Password</string>
    <string name="sing_in">Sign In</string>
    <string name="error_msg">login failed with previous credentials, Please login again.</string>

    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="one">4</string>
    <string name="add_new_table_location">Add New Location</string>
    <string name="follow_me">Follow Me</string>
    <string name="login_error_msg">Invalid Username or Password</string>
    <string name="stop_following">Stop Following</string>
    <string name="or">OR</string>
    <string name="save_location">Save Location</string>
    <string name="new_location">New Location</string>
    <string name="location_name">Location Name</string>
    <string name="capacity">Capacity</string>
    <string name="step_1">Step 1</string>
    <string name="step_3">Step 3</string>
    <string name="step_2">Step 2</string>
    <string name="available_seats">Available Seats</string>
    <string name="food_menu">Food Menu</string>
    <string name="menu">Menu</string>
    <string name="categories">Categories</string>
    <string name="my_order">My Order: 0</string>
    <string name="cart_items">Cart Items</string>
    <string name="discount_offers">Discount Offers</string>
    <string name="discount_code">Discount Code</string>
    <string name="apply">Apply</string>
    <string name="order_summery">Order Summery</string>
    <string name="the_total_amount">The total amount of (Inclusive GST)</string>
    <string name="offers">Offers</string>
    <string name="gst">GST</string>
    <string name="complete_order">Complete Offer</string>
    <string name="clear_cart_items">Clear Cart Items</string>
    <string name="your_cart_is_empty">Your Cart is empty!</string>
    <string name="cart">Cart</string>
    <string name="default_notification_channel_id">waiter</string>
    <string name="fcm_message">Robot Waiter</string>
    <string name="select_location">Select Location</string>
    <string name="available_devices">Available devices</string>
    <string name="paired_devices">Pared devices</string>
    <string name="menu_scan_devices">Scan devices</string>
    <string name="menu_search_devices">Search devices</string>
    <string name="menu_bluetooth_on">Bluetooth On</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_path">Create New Path</string>
    <string name="path">Path</string>
    <string name="saved_path">Created Paths</string>
    <string name="save">Save</string>
    <string name="dash_3">---</string>
    <string name="path_list">Path List</string>
    <string name="save_path">Save Path</string>
    <string name="path_name">Path Name</string>
    <string name="update">Update</string>
    <string name="edit_path">Edit Path</string>
    <string name="scanned_devices">Scanned devices</string>
    <string name="connect_device">Connect Device</string>


    <string name="start_discovery">Start Discovery</string>
    <string name="stop_discovery">Stop Discovery</string>
    <string name="start_advertising">Start Advertising</string>
    <string name="stop_advertising">Stop Advertising</string>
    <string name="starting">Starting…</string>
    <string name="peers">Peers</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="connect">Connect</string>
    <string name="go_to_path">Go to Path</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="add_location">Add New Location</string>
    <string name="not_connected">Not Connected</string>
    <string name="delete">Delete</string>
    <string name="songs_to_play_at_each_location">Songs to play at each location</string>
    <string name="songs_1">Songs: 1</string>
    <string name="songs_settings">"Set Songs "</string>
    <string name="set_password">Set password</string>
    <string name="set_admin_password">Set admin password</string>
    <string name="change_password">Change Password</string>
    <string name="select_time">Select Time</string>
    <string name="time">hh:mm a</string>
    <string name="dash">------------</string>
    <string name="schedule_location">Schedule Location</string>

    <string-array name="connectivity_entries">
        <item>Nearby Connections API</item>
        <item>Bluetooth</item>
        <item>Bluetooth LE + Classic</item>
        <item>Bluetooth LE Gatt</item>
        <item>Bluetooth LE L2CAP</item>
        <item>WiFi Aware</item>
        <item>WiFi Direct</item>
    </string-array>

    <string-array name="connectivity_values">
        <item>NearbyConnectivityManager</item>
        <item>BluetoothConnectivityManager</item>
        <item>BleConnectivityManager</item>
        <item>BleGattConnectivityManager</item>
        <item>BleL2CapConnectivityManager</item>
        <item>WifiAwareConnectivityManager</item>
        <item>WifiDirectConnectivityManager</item>
    </string-array>

    <string name="channel_name">Alarms notifications</string>
    <string name="channel_description">Receive Notifications alarms</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear">Clear Alarms</string>
    <string name="menu_remove_persisted">Remove Past Persisted Alarms</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="click_on_the_plus_to_add_alarm">Click on the \'+\' to add an alarm</string>
    <string name="persist">Persist</string>
    <string name="enter_unique_id">Enter unique id</string>
    <string name="uid">UID</string>
    <string name="start_time">Alarm time: %1$s</string>
    <string name="start_date">Alarm date: %1$s</string>
    <string name="activity_alarms_description">Here you can see the list of existing alarms.\nClick on any of the alarms to cancel it.\nSee settings for more options.</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="cancel_alarm_confirmation_text">Cancel alarm?</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="row_alarm_uid">Uid: </string>
    <string name="row_alarm_time">Time: </string>
    <string name="row_alarm_persist">Persist: </string>
    <string name="remove_persisted_alarms_explanation">Click on settings and choose remove past persisted alarms to cancel previous persisted alarms</string>
    <string name="remove_all">Remove All</string>
    <string name="create_schedule">Create Schedule</string>


</resources>