<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/option_width"
    android:paddingVertical="@dimen/space_xl"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.PathOptionsFragment">

    <TextView
        android:id="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_head"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_normal"/>

    <Button
        android:id="@+id/btnGo"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginTop="@dimen/size_small"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:paddingVertical="@dimen/space_large"
        android:text="@string/go_to_path"
        android:background="@drawable/button_lite"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@id/btnGo"
        android:layout_marginTop="@dimen/size_small"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:text="@string/edit_path"
        android:paddingVertical="@dimen/space_large"
        android:background="@drawable/button_lite"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        android:layout_marginTop="@dimen/size_small"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:text="@string/delete"
        android:paddingVertical="@dimen/space_large"
        android:background="@drawable/button_red"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/btnDelete"
        android:layout_marginTop="@dimen/size_small"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:text="@string/dialog_cancel"
        android:paddingVertical="@dimen/space_large"
        android:background="@drawable/gray_button_background"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>