<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.alarm.AlarmListFragment">

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBar"
        android:background="@color/card_bg_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBack"
                android:src="@drawable/ic_arrow"
                android:layout_width="@dimen/size_normal"
                android:layout_height="@dimen/size_normal"/>

            <TextView
                android:layout_marginStart="@dimen/size_small"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_head"
                android:text="@string/schedule_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:padding="@dimen/space_normal"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAddNew"
            android:textColor="@color/gray"
            android:background="@drawable/button_lite"
            android:text="@string/create_schedule"
            android:paddingHorizontal="@dimen/space_large"
            android:layout_marginEnd="@dimen/space_large"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRefresh"
            android:textColor="@color/gray"
            android:background="@drawable/button_lite"
            android:paddingHorizontal="@dimen/space_large"
            android:layout_marginEnd="@dimen/space_large"
            android:text="@string/menu_refresh"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRemove"
            android:textColor="@color/gray"
            android:background="@drawable/button_lite"
            android:text="@string/remove_all"
            android:paddingHorizontal="@dimen/space_large"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        app:spanCount="1"
        tools:listitem="@layout/item_alarm"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/actions"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>