<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">

    <View
        android:background="@color/tans_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_large"
        android:src="@drawable/ic_ai_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_large"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_large"
        android:src="@drawable/ic_ratio"
        app:layout_constraintEnd_toStartOf="@id/imgSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="@dimen/text_head"
        android:layout_marginStart="@dimen/space_large"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/imgLogo"
        app:layout_constraintEnd_toEndOf="@id/imgSettings"
        app:layout_constraintStart_toEndOf="@+id/imgLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_large"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">

        <FrameLayout
            android:id="@+id/viewLocations"
            android:layout_width="@dimen/home_btn"
            android:layout_height="@dimen/home_btn"
            android:layout_margin="@dimen/space_xl"
            android:background="@drawable/border_btn">

            <TextView
                android:id="@+id/tvLocations"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/space_large"
                android:gravity="center"
                android:text="@string/locations"
                android:textColor="@color/white"
                android:textSize="@dimen/text_head"
                app:drawableTopCompat="@drawable/ic_compass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/viewPath"
            android:layout_width="@dimen/home_btn"
            android:layout_height="@dimen/home_btn"
            android:layout_margin="@dimen/space_xl"
            android:background="@drawable/border_btn">

            <TextView
                android:id="@+id/tvPathName"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/space_large"
                android:gravity="center"
                android:text="@string/path"
                android:textColor="@color/white"
                android:textSize="@dimen/text_head"
                app:drawableTopCompat="@drawable/ic_map_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>